--- a/FeinesCamp.iOS/FeinesCamp.iOS.csproj
+++ b/FeinesCamp.iOS/FeinesCamp.iOS.csproj
@@ -113,6 +113,31 @@
     <ImageAsset Include="Assets.xcassets\AppIcon.appiconset\Icon20.png">
       <Visible>false</Visible>
     </ImageAsset>
+    <ImageAsset Include="Assets.xcassets\goteo.imageset\Contents.json" />
+    <ImageAsset Include="Assets.xcassets\goteo.imageset\goteo.png" />
+    <ImageAsset Include="Assets.xcassets\goteo.imageset\goteo-1.png" />
+    <ImageAsset Include="Assets.xcassets\goteo.imageset\goteo-2.png" />
+    <ImageAsset Include="Assets.xcassets\goteo.imageset\goteo-3.png" />
+    <ImageAsset Include="Assets.xcassets\manguera.imageset\Contents.json" />
+    <ImageAsset Include="Assets.xcassets\manguera.imageset\manguera.png" />
+    <ImageAsset Include="Assets.xcassets\manguera.imageset\manguera-1.png" />
+    <ImageAsset Include="Assets.xcassets\mochila.imageset\Contents.json" />
+    <ImageAsset Include="Assets.xcassets\mochila.imageset\moxila.png" />
+    <ImageAsset Include="Assets.xcassets\mochila.imageset\moxila-1.png" />
+    <ImageAsset Include="Assets.xcassets\mochila.imageset\moxila-2.png" />
+    <ImageAsset Include="Assets.xcassets\manguera.imageset\manguera-2.png" />
+    <ImageAsset Include="Assets.xcassets\pulvMochila.imageset\Contents.json" />
+    <ImageAsset Include="Assets.xcassets\pulvMochila.imageset\pulvMochila.png" />
+    <ImageAsset Include="Assets.xcassets\pulvMochila.imageset\pulvMochila-1.png" />
+    <ImageAsset Include="Assets.xcassets\pulvMochila.imageset\pulvMochila-2.png" />
+    <ImageAsset Include="Assets.xcassets\segar.imageset\Contents.json" />
+    <ImageAsset Include="Assets.xcassets\segar.imageset\segar.png" />
+    <ImageAsset Include="Assets.xcassets\segar.imageset\segar-1.png" />
+    <ImageAsset Include="Assets.xcassets\segar.imageset\segar-2.png" />
+    <ImageAsset Include="Assets.xcassets\tractor.imageset\Contents.json" />
+    <ImageAsset Include="Assets.xcassets\tractor.imageset\tractor.png" />
+    <ImageAsset Include="Assets.xcassets\tractor.imageset\tractor-1.png" />
+    <ImageAsset Include="Assets.xcassets\tractor.imageset\tractor-2.png" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -125,6 +150,15 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="4.5.0.495" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
+    <PackageReference Include="Refractored.MvvmHelpers">
+      <Version>1.3.0</Version>
+    </PackageReference>
+    <PackageReference Include="Newtonsoft.Json">
+      <Version>12.0.3</Version>
+    </PackageReference>
+    <PackageReference Include="Xam.Plugins.Forms.ImageCircle">
+      <Version>3.0.0.5</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
@@ -132,5 +166,13 @@
       <Project>{78725907-0395-4117-9634-9B2FAC121173}</Project>
       <Name>FeinesCamp</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Assets.xcassets\goteo.imageset\" />
+    <Folder Include="Assets.xcassets\manguera.imageset\" />
+    <Folder Include="Assets.xcassets\mochila.imageset\" />
+    <Folder Include="Assets.xcassets\pulvMochila.imageset\" />
+    <Folder Include="Assets.xcassets\segar.imageset\" />
+    <Folder Include="Assets.xcassets\tractor.imageset\" />
   </ItemGroup>
 </Project>
