--- a/FeinesCamp.Android/FeinesCamp.Android.csproj
+++ b/FeinesCamp.Android/FeinesCamp.Android.csproj
@@ -64,6 +64,9 @@
     <PackageReference Include="Xam.Plugins.Forms.ImageCircle">
       <Version>3.0.0.5</Version>
     </PackageReference>
+    <PackageReference Include="sqlite-net-pcl">
+      <Version>1.7.335</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
