--- a/FeinesCamp.Android/FeinesCamp.Android.csproj
+++ b/FeinesCamp.Android/FeinesCamp.Android.csproj
@@ -67,6 +67,9 @@
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.7.335</Version>
     </PackageReference>
+    <PackageReference Include="Rg.Plugins.Popup">
+      <Version>2.0.0.2</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
